2006-03-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/bar-number-engraver.cc: add support for
	barNumberAlignSymbol. 
	add ADD_ACKNOWLEDGER() call for break_aligned. Fixes bar-number-breathe

	* lily/pointer-group-interface.cc (set_ordered): new function. 
	(add_unordered_grob): new function.

	* lily/grob-array.cc (Grob_array): grob-arrays are always assumed
	to ordered, unless the opposite has been proved.  This fixes
	random reordering of large object groups across linebreaks,
	eg. beams.

	* lily/main.cc (do_chroot_jail): printf format fix.

	* lily/tie-formatting-problem.cc (generate_configuration):
	multiply y-shift for dot with direction.
 
	* scm/define-markup-commands.scm (note-by-number): put (magstep
	size) in y-attach too.

	* Documentation/topdocs/NEWS.tely (Top): show override.

	* scm/define-grobs.scm (all-grob-descriptions): reinstate neutral
	direction for stems.
	
2006-03-15  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ changing-defaults, global: minor
	fixes from mailist.

2006-03-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll (Lily_lexer): bump required version to 2.7.38

	* lily/spacing-spanner.cc (musical_column_spacing): crude fix for
	breakable items after uniformly stretched notes.

	* lily/tie-formatting-problem.cc (set_chord_outline): initialize
	outline with outer edge of note heads. This prevents infinity
	problems with tied whole notes.

	* scripts/lilypond-book.py (do_file): use os.popen

	* python/convertrules.py (conv): add rule for Stem #'beamed-*

2006-03-14 Erik Sandberg  <mandolaerik@gmail.com>

	* Documentation/user/invoking.itely: Add ragged-right to bug report
	guidelines.

2006-03-14  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/global.itely: small fix from mailist.

2006-03-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (LATEX_INSPECTION_DOCUMENT): Use the
	file descriptor returned by tempfile.mkstemp() when writing