@@ -1,5 +1,8 @@
 2006-03-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/rest.cc (y_offset_callback): only use direction if
+	staff-position wasn't set before.
+
 	* lily/bar-number-engraver.cc: add support for
 	barNumberAlignSymbol. 
 	add ADD_ACKNOWLEDGER() call for break_aligned. Fixes bar-number-breathe
